--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
@@ -283,7 +283,7 @@
 	border-radius: 25px;
 	padding: 2%;
 	max-width: fit-content;
-	transform: translate(85%, -75%);
+	transform: translate(0%, -75%);
 }
 
 .missionCityListView {
@@ -536,7 +536,7 @@
 }
 
 .img-fluid {
-	width: 100vh !important;
+	width: 99%;
 	height: 100%;
 }
 
