Completed filter part of skill and completed sort by functionality

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
@@ -25,7 +25,9 @@
 .dropdown-toggle::after {
 	display: none;
 }
-
+.countrySelect{
+	border:0 !important;
+}
 .searchimg img {
 	height: 22px;
 	width: 22px;
