--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
@@ -684,7 +684,9 @@
 .EPprivacypolicy {
 	font-size: 12px;
 }
-
+.page-item{
+	color:#F88634;
+}
 @media only screen and (max-width: 576px) {
 	.likeBox {
 		color: white;
