Started working on volunteer mission page

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/MissionView.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/MissionView.css
@@ -22,7 +22,9 @@ body {
     margin-left: 5px;
     color: #888;
 }
-
+.slide-item img{
+	height:500px !important;
+}
 .filters-section {
     margin-top: 1%;
 }
