Completed add to favourite functionality and started working on ratings

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/EditProfile.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/EditProfile.css
@@ -20,7 +20,11 @@ body {
     border-radius: 50%;
 
 }
-
+.modal-footer .changepass {
+    color: #F88634;
+    border: 2px solid #F88634;
+    border-radius: 25px;
+}
 .rightHeader {
     flex-direction: row !important;
     align-items: flex-start;
