Completed share your story page and started edit profile page'

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ResetPass.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ResetPass.css
@@ -21,7 +21,9 @@ h3 {
     margin-left: 15%;
     padding-top: 2% !important;
 }
-
+.carousel-item .img{
+	height:100vh !important;
+}
 .myform {
     position: relative;
     display: -ms-flexbox;
