--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/Admin.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/Admin.css
@@ -22,7 +22,16 @@ body {
 .registrationDeadline{
 	margin-left:1rem;
 	margin-right:1rem;
-	width:90%;	
+	width:93%;	
+}
+.skillbutton{
+	color:black;
+	background: none !important;
+    height: 27px;
+    margin-top: 8px;
+    border-radius: 2px;
+    width: 90%;
+    margin-left: 14px
 }
 .videoURL{
 	margin-left:1rem;
@@ -223,4 +232,10 @@ li {
     .searchboxh2{
         font-size: 12px;
     }
+}
+@media only screen and (min-width: 1400px) {
+	.strUploadBox{
+		width:97%
+	}
+	
 }
