Completed Mission Crud and started working on theme skill and banner crud

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ForgotPass.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ForgotPass.css
@@ -139,5 +139,8 @@ form .error {
         margin-left: 5%;
         padding-top: 0.3% !important;
     }
-    
+    .carousel-item img{
+		min-height:350px !important;
+		max-height:350px !important;
+	}
 }
