--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ResetPass.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/ResetPass.css
@@ -126,7 +126,10 @@ form .error {
         padding-left: 6%; 
         padding-bottom: 1%;
     }
-    
+    .carousel-item img{
+		min-height:350px !important;
+		max-height:350px !important;
+	}
 .form-control{
     line-height: 0;
     width: 90%;
