Completed admin side and started working on bugs of project

--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
@@ -18,6 +18,13 @@
 	flex-direction: row !important;
 	align-items: flex-start;
 }
+.activePage{
+	background-color: #f88634;
+    color: white;
+}
+.pagination>li>a, .pagination>li>span{
+	color: #f88634;
+}
 .missionImg{
 	padding:0 !important;
 }
