--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/HomeGrid.css
@@ -13,6 +13,9 @@
 	width: 40px;
 	border-radius: 50%;
 }
+.progress{
+	margin-bottom:3px;
+}
 
 .rightHeader {
 	flex-direction: row !important;
@@ -283,6 +286,33 @@
 	background-color:rgba(0, 0, 0, 0.511);
 	right: 4%;
 	top: 15%;
+	padding: 2%;
+}
+.appliedBox {
+	color: white;
+	border-top-right-radius: 50px;
+	border-bottom-right-radius: 50px;
+	background-color:green;
+	right: 83.5%;
+	top: 3%;
+	padding: 2%;
+}
+.closedBox {
+	color: white;
+	border-top-right-radius: 50px;
+	border-bottom-right-radius: 50px;
+	background-color:orange;
+	right: 85%;
+	top: 3%;
+	padding: 2%;
+}
+.openBox {
+	color: white;
+	border-top-right-radius: 50px;
+	border-bottom-right-radius: 50px;
+	background-color:orange;
+	right: 87%;
+	top: 3%;
 	padding: 2%;
 }
 
