--- a/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/Admin.css
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/resources/css/Admin.css
@@ -12,6 +12,10 @@ body {
 .sidebar {
     background-color: #F88634;
 }
+.nav-item a{
+	text-decoration:none !important;
+	margin-left:5px !important;
+}
 .nav-link{
 	color:none;
 }
